--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "rescript-library-template",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:resinfo/rescript-library-template.git",
-  "author": "Oliver Fencott <oliverfencott@gmail.com>",
+  "repository": "git@github.com:KYAEthanNel/rescript-library-template.git",
+  "author": "Ethan Nel <ethan.nel@thekyagroup.com>",
   "license": "MIT",
   "devDependencies": {
-    "ava": "3.15.0",
-    "rescript": "^9.1.4",
-    "rescript-ava": "3.15.0"
+    "rescript": "^11.1.4"
   },
   "scripts": {
     "make": "rescript build -with-deps",
     "dev": "rescript build -w",
-    "test": "ava"
+    "rescript": "rescript"
+  },
+  "dependencies": {
+    "@hubspot/ui-extensions": "latest",
+    "@rescript/core": "^1.6.1",
+    "@rescript/react": "^0.14.0",
+    "react": "^18.3.1"
   }
 }
