--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "dependencies": {
     "@glennsl/rescript-fetch": "^0.2.3",
-    "@hubspot/ui-extensions": "latest",
+    "@hubspot/ui-extensions": "0.11.4",
     "@rescript/core": "^1.6.1",
     "@rescript/react": "^0.13",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rescript-webapi": "^0.10.0"
   }
 }
